--- a/03_Badges_Tests/03_Badges_Tests.csproj
+++ b/03_Badges_Tests/03_Badges_Tests.csproj
@@ -51,10 +51,15 @@
   <ItemGroup>
     <Compile Include="Badge_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BadgeRepository_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\03_Badges_Classes\03_Badges_Classes.csproj">
+      <Project>{EB250D6A-E8B5-4C1E-A9EC-6E255F171565}</Project>
+      <Name>03_Badges_Classes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
